Implemented the insert functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,6 @@ spring.h2.console.enabled=true
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 DB_CLOSE_ON_EXIT=FALSE
+#spring.sql.init.mode=always
+#spring.jpa.defer-datasource-initialization=true
 
